<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/ic_find"
        android:title="@string/nav_find" />
    <item
        android:id="@+id/navigation_decode"
        android:icon="@drawable/ic_decode"
        android:title="@string/nav_decode" />
    <item
        android:id="@+id/navigation_stories"
        android:icon="@drawable/ic_stories"
        android:title="@string/nav_stories" />
    <item
        android:id="@+id/navigation_trail"
        android:icon="@drawable/ic_trail"
        android:title="@string/nav_trail" />
    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_alert"
        android:title="@string/nav_alert" />
</menu>
